--- a/public/index_count.html
+++ b/public/index_count.html
@@ -11,11 +11,8 @@
     <title>Vanilla Redux</title>
   </head>
   <body>
-    <h1>To Dos</h1>
-    <form>
-      <input type="text" placeholder="to dos..."/>
-      <button>Add</button>
-    </form>
-    <ul></ul>
+    <button id="add">Add</button>
+    <span></span>
+    <button id="minus">Minus</button>
   </body>
 </html>
